[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/supply_chain_gymnasium"]

[project]
name = "supply_chain_gymnasium"
version = "0.0.1"
dependencies = [
    "gymnasium",
    "pygame>=2.1.3",
    "pre-commit",
    "stable-baselines3[extra]>=2.7.1",
    "tensorboard>=2.20.0",
    "rich[jupyter]>=14.3.1",
]
requires-python = "==3.12.*"
